Fixed 3 bugs
Double line when value overflows for the mobile version
changed cursor type on Name
prevented empty input

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 
 h1{
   font-size: 3rem;
+  cursor: pointer;
 }
 
 h1,form{
@@ -159,6 +160,6 @@ form button:hover{
   }
 
   .list-obj{
-    height: 5vh;
+    height: auto;
   }
 }
